# legal-os

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml
backend/: AGENTS.md  Dockerfile  IMPLEMENTATION_PLAN.md  TODO.md  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260118_1305_initial_schema.py
backend/app/: database.py  llm_client.py  main.py  task_storage.py
backend/app/agents/: __init__.py  analysis.py  coordinator.py  report.py  retrieval.py  review.py  state.py  validation.py  workflow.py
backend/app/api/: __init__.py  rag_routes.py  schemas.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  monitoring.py  prometheus.py  security.py  tracing.py
backend/app/evaluation/: __init__.py  baselines.py  data_generator.py  data_validator.py  golden_dataset.py  metrics.py
backend/app/middleware/: __init__.py  error_handler.py  logging.py
backend/app/models/: __init__.py  analysis_result.py  base.py  contract.py  document.py  knowledge_chunk.py  task.py
backend/scripts/: init-db.sql
backend/tests/: test_agents.py  test_api.py  test_bge_embedding.py  test_bm25.py  test_chunkers.py  test_contracts_api.py  test_e2e_analysis.py  test_embedding_cache.py  test_embeddings.py  test_exceptions.py  test_llm.py  test_loaders.py  test_monitoring.py  test_rag_api.py  test_retrieval.py  test_task_storage.py  test_tracing.py  test_vector_store.py  test_workflow_integration.py  test_zhipu_client.py
(+98 files in other folders)
